src/objects/Discover__c.object
<CustomObject>
    <fields>
        <fullName>AutoNumberField__c</fullName>
        <description>Description</description>
        <inlineHelpText>HelpText</inlineHelpText>
        <label>AutoNumberField</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_currency2__c</fullName>
        <label>diz_currency2__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_currency__c</fullName>
        <label>diz_currency__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_date__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_locationXXX__c</fullName>
        <label>diz_locationXXX__c</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_location__c</fullName>
        <label>diz_location__c</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_phoneA__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phoneA__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phoneXXXX__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phoneXXXX__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>5464rgfd</fullName>
                    <default>true</default>
                    <label>5464rgfd</label>
                </value>
                <value>
                    <fullName>asdas</fullName>
                </value>
                <value>
                    <fullName>dsfdfg</fullName>
                </value>
                <value>
                    <fullName>hgbnvbn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_textA__c</fullName>
        <label>diz_textA__c</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <label>diz_text__c</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diz_urlXXX__c</fullName>
        <label>diz_urlXXX__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>diz_url__c</fullName>
        <label>diz_url__c</label>
        <type>Url</type>
    </fields>
    <label>Discover</label>
    <nameField>
        <label>Discover Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>